--- a/Publication.html
+++ b/Publication.html
@@ -120,19 +120,22 @@
 
 
      <p><strong>Journals</strong> | <a href="/Publication.html#2022">2022</a>, <a href="/Publication.html#2021">2021</a>, <a href="/Publication.html#2020">2020</a>,  <a href="/Publication.html#2019">2019</a>, <a href="/Publication.html#2018">2018</a>, 
-
-
      <p><strong>Conferences</strong> | <a href="/Publication.html#2022-1">2022</a>, <a href="/Publication.html#2021-1">2021</a>, <a href="/Publication.html#2020-1">2020</a>, <a href="/Publication.html#2019-1">2019</a>, <a href="/Publication.html#2018-1">2018</a>
 
 
-  <h2><a id="2022" class="anchor" href="#2022" aria-hidden="true"><span class="octicon octicon-link"></span></a>2022</h2>
+  <h2>2022</h2>
   <p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
-    <h3>Journal</h3>
+    <h3><a id="2022" class="anchor" href="#2022" aria-hidden="true"><span class="octicon octicon-link"></span></a>Journal</h3>
         <ul>
-       <p><font size=''4''>[7]</font>,. <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
+       <p><font size=''6''>[7]</font>,. <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
 
         <p><font size=''3''>[7]</font>,  <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
 
+        <p><font size=''4''>[7]</font>,  <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
+
+    <h3><a id="2022-1" class="anchor" href="#2022-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conference</h3>
+
+         <p><font size=''5''>[7]</font>,. <strong>Conferences*</strong>, Hengli Wang*, Yuan Wang*, Ming Liu, Ioannis Pitas, &ldquo;Graph Attention Layer Evolves Semantic Segmentation for Road Pothole Detection: A Benchmark and Algorithms,&rdquo; IEEE Transactions on Image Processing <i>(T-IP)</i>, 2021. (* indicates equal contribution) <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf" target="_blank">pdf</a> <a href="https://tyleransom.github.io/research/RealPenaltyOnlineAppendix.pdf"><i class="fa fa-file"> bibtex</i></a>.</p>
 
        </ul>
     <hr>
