--- a/Publication.html
+++ b/Publication.html
@@ -119,7 +119,7 @@
 </p>
 
 
-     <p><strong>Journals</strong> | <a href="/Publication.html#2022">2022</a>, <a href="/Publication.html#2021">2021</a>, <a href="/Publication.html#2020">2020</a>,  <a href="/Publication.html#2019">2019</a>, <a href="/Publication.html#2018">2018</a>, 
+     <p><strong>Journals</strong> | <a href="/Publication.html#2022">2022</a>, <a href="/Publication.html#2020">2020</a>,  <a href="/Publication.html#2019">2019</a>, <a href="/Publication.html#2018">2018</a>, 
      <p><strong>Conferences</strong> | <a href="/Publication.html#2022-1">2022</a>, <a href="/Publication.html#2021-1">2021</a>, <a href="/Publication.html#2020-1">2020</a>, <a href="/Publication.html#2019-1">2019</a>, <a href="/Publication.html#2018-1">2018</a>
 
 
@@ -129,34 +129,27 @@
         <ul>
         <p><font size=4><strong>[5]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  in IEEE Robotics and Automation Letters (RA-L),  2022.  
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.bib" target="_blank"> bibtex</i></a>.</p>
-
         <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, S. Perera, H. Hauser, P. R. N. Childs and T. Nanayakkara. "A Tapered Whisker-Based Physical Reservoir Computing System for Mobile Robot Terrain Identification in Unstructured Environments," in IEEE Robotics and Automation Letters (RA-L), vol. 7, no. 2, pp. 3608-3615, April 2022.  
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" target="_blank"> bibtex</i></a>.</p>
-
-        
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" target="_blank"> bibtex</i></a>.</p>     
         </ul>
+
     <h3><a id="2022-1" class="anchor" href="#2022-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conference</h3>
      <ul>
         <p><font size=4><strong>[5]</strong></font>,  <strong>Zhenhua Yu*</strong>, S. Perera, H. Hauser, P. R. N. Childs and T. Nanayakkara. "A Tapered Whisker-Based Physical Reservoir Computing System for Mobile Robot Terrain Identification in Unstructured Environments," in IEEE International Conference on Robotics and Automation (ICRA 2022).IEEE. May,2022..  
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" target="_blank"> bibtex</i></a>.</p>
-
-         <p><font size=4><strong>[5]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  In 2022 IEEE 5th International Conference on Soft Robotics (RoboSoft 2022). IEEE. April,2022.. 
+       <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  In 2022 IEEE 5th International Conference on Soft Robotics (RoboSoft 2022). IEEE. April,2022.. 
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.bib"target="_blank"> bibtex</i></a>.</p>
-
-
        </ul>
     <hr>
 
-
-<h2><a id="2021" class="anchor" href="#2021" aria-hidden="true"><span class="octicon octicon-link"></span></a>2021</h2>
+ <h2>2021</h2>
 <p><a href="/Publication.html#top"><i class="fa fa-level-up"> Back to top</i></a>
-    <h3>Julia</h3>
-        <ul>
-          <li><a href="https://tyleransom.github.io/research/JuliaPresentation.pdf">Introduction to Julia for economists</a>: Slides from a short presentation that introduces <a href="http://julialang.org/">Julia</a>.</li>
-          <li><a href="http://quantecon.org/notebooks.html">QuantEcon's notebook gallery</a>, which includes a few of my notebooks introducing data analysis and optimization in <a href="http://julialang.org/">Julia</a>.</li>
-          <li><a href="https://github.com/tyleransom/Julia">My Github repository</a>, which introduces basic econometric models in <a href="http://julialang.org/">Julia</a>.</li>
-          <li><a href="https://github.com/tyleransom/EMalgorithmExample"><code>EM algorithm example</code></a>: Code to generate data and estimate simple versions of the EM algorithm for estimation of models with discrete type-specific unobserved heterogeneity.</li>
-        </ul>
+    <h3><a id="2021-1" class="anchor" href="#2021-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conference</h3>
+    <ul>
+        <p><font size=4><strong>[3]</strong></font>,  <strong>Zhenhua Yu*</strong>,  Sadati, S. H., Wegiriya, H., Childs, P., & Nanayakkara, T.``A Method to use Nonlinear Dynamics in a Whisker Sensor for Terrain Identification by Mobile Robots". In 2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021) (pp. 8437-8443). IEEE. August,2021.  
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" target="_blank"> bibtex</i></a>.</p>
+
+       </ul>
     <hr>
 
 
