--- a/Publication.html
+++ b/Publication.html
@@ -128,9 +128,11 @@
     <h3><a id="2022" class="anchor" href="#2022" aria-hidden="true"><span class="octicon octicon-link"></span></a>Journal</h3>
         <ul>
         <p><font size=4><strong>[5]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  in IEEE Robotics and Automation Letters (RA-L),  2022.  
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.bib" target="_blank"> bibtex</i></a>.</p>
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a> 
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.bib" ><i class="fa fa-file"> bibtex</i></a>.</p>
         <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, S. Perera, H. Hauser, P. R. N. Childs and T. Nanayakkara. "A Tapered Whisker-Based Physical Reservoir Computing System for Mobile Robot Terrain Identification in Unstructured Environments," in IEEE Robotics and Automation Letters (RA-L), vol. 7, no. 2, pp. 3608-3615, April 2022.  
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" target="_blank"> bibtex</i></a>.</p>     
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> 
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" ><i class="fa fa-file"> bibtex</i></a>.</p>     
         </ul>
 
     <h3><a id="2022-1" class="anchor" href="#2022-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conference</h3>
