--- a/Publication.html
+++ b/Publication.html
@@ -138,9 +138,10 @@
     <h3><a id="2022-1" class="anchor" href="#2022-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conference</h3>
      <ul>
         <p><font size=4><strong>[5]</strong></font>,  <strong>Zhenhua Yu*</strong>, S. Perera, H. Hauser, P. R. N. Childs and T. Nanayakkara. "A Tapered Whisker-Based Physical Reservoir Computing System for Mobile Robot Terrain Identification in Unstructured Environments," in IEEE International Conference on Robotics and Automation (ICRA 2022).IEEE. May,2022..  
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" target="_blank"> bibtex</i></a>.</p>
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib"><i class="fa fa-file"> bibtex</i></a>.</p>
        <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  In 2022 IEEE 5th International Conference on Soft Robotics (RoboSoft 2022). IEEE. April,2022.. 
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.bib"target="_blank"> bibtex</i></a>.</p>
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a> 
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.bib"><i class="fa fa-file">> bibtex</i></a>.</p>
        </ul>
     <hr>
 
@@ -149,7 +150,8 @@
     <h3><a id="2021-1" class="anchor" href="#2021-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Conference</h3>
     <ul>
         <p><font size=4><strong>[3]</strong></font>,  <strong>Zhenhua Yu*</strong>,  Sadati, S. H., Wegiriya, H., Childs, P., & Nanayakkara, T.``A Method to use Nonlinear Dynamics in a Whisker Sensor for Terrain Identification by Mobile Robots". In 2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021) (pp. 8437-8443). IEEE. August,2021.  
-<a href="https://dr-zhenhua-yu.github.io//publication/2021_IROS.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2021_IROS.bib" target="_blank"> bibtex</i></a>.</p>
+<a href="https://dr-zhenhua-yu.github.io//publication/2021_IROS.pdf" target="_blank">pdf</a> 
+<a href="https://dr-zhenhua-yu.github.io//publication/2021_IROS.bib" ><i class="fa fa-file"> bibtex</i></a>.</p>
        </ul>
     <hr>
 
