--- a/Publication.html
+++ b/Publication.html
@@ -129,7 +129,7 @@
         <ul>
         <p><font size=4><strong>[5]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  in IEEE Robotics and Automation Letters (RA-L),  2022.  
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a> 
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.bib" target="_blank"> bibtex</a>.</p>
+<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:G7-RcgamI0EJ:scholar.google.com/&output=citation&scisdr=CgXXzk_wENGGnPfkiHU:AAGBfm0AAAAAYmbikHVUUnVNc5HdflGUywY6sd8fht3A&scisig=AAGBfm0AAAAAYmbikPwfB-m4fe4ItfFyRIu74VNqChca&scisf=4&ct=citation&cd=-1&hl=en" target="_blank">bibtex</a>.</p>
         <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, S. Perera, H. Hauser, P. R. N. Childs and T. Nanayakkara. "A Tapered Whisker-Based Physical Reservoir Computing System for Mobile Robot Terrain Identification in Unstructured Environments," in IEEE Robotics and Automation Letters (RA-L), vol. 7, no. 2, pp. 3608-3615, April 2022.  
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> 
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib" ><i class="fa fa-file"> bibtex</i></a>.</p>     
@@ -141,7 +141,7 @@
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib"><i class="fa fa-file"> bibtex</i></a>.</p>
        <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  In 2022 IEEE 5th International Conference on Soft Robotics (RoboSoft 2022). IEEE. April,2022.. 
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a> 
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.bib"><i class="fa fa-file">> bibtex</i></a>.</p>
+<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:G7-RcgamI0EJ:scholar.google.com/&output=citation&scisdr=CgXXzk_wENGGnPfkiHU:AAGBfm0AAAAAYmbikHVUUnVNc5HdflGUywY6sd8fht3A&scisig=AAGBfm0AAAAAYmbikPwfB-m4fe4ItfFyRIu74VNqChca&scisf=4&ct=citation&cd=-1&hl=en" target="_blank">bibtex</a>.</p>
        </ul>
     <hr>
 
