--- a/Publication.html
+++ b/Publication.html
@@ -140,7 +140,8 @@
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.pdf" target="_blank">pdf</a> 
 <a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_ICRA_2022.bib"><i class="fa fa-file"> bibtex</i></a>.</p>
        <p><font size=4><strong>[4]</strong></font>,  <strong>Zhenhua Yu*</strong>, Sadati, S. H., Helmut Hauser, Peter Childs, Thrishantha Nanayakkara. "A Semi-Supervised Reservoir Computing System Based on Tapered Whisker for Mobile Robot Terrain Identification and Roughness Estimation''.  In 2022 IEEE 5th International Conference on Soft Robotics (RoboSoft 2022). IEEE. April,2022.. 
-<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a>.</p>
+<a href="https://dr-zhenhua-yu.github.io//publication/2022_Zhenhua_RA_L_RoboSoft_2022.pdf" target="_blank">pdf</a>.
+<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:9jhsjSWE4VAJ:scholar.google.com/&output=citation&scisdr=CgXXzk_wENGGnPfRFlU:AAGBfm0AAAAAYmbXDlXGWxZ4yqX35pHAunjuiWI2Y7-Z&scisig=AAGBfm0AAAAAYmbXDolJxlQtwuVmh20KDQZ8Hz8ecDob&scisf=4&ct=citation&cd=-1&hl=en" target="_blank">bibtex</a>.</p>
        </ul>
     <hr>
 
@@ -150,7 +151,7 @@
     <ul>
         <p><font size=4><strong>[3]</strong></font>,  <strong>Zhenhua Yu*</strong>,  Sadati, S. H., Wegiriya, H., Childs, P., & Nanayakkara, T.``A Method to use Nonlinear Dynamics in a Whisker Sensor for Terrain Identification by Mobile Robots". In 2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2021) (pp. 8437-8443). IEEE. August,2021.  
 <a href="https://dr-zhenhua-yu.github.io//publication/2021_IROS.pdf" target="_blank">pdf</a> 
-<a href="https://scholar.googleusercontent.com/scholar.bib?q=info:9jhsjSWE4VAJ:scholar.google.com/&output=citation&scisdr=CgXXzk_wENGGnPfRFlU:AAGBfm0AAAAAYmbXDlXGWxZ4yqX35pHAunjuiWI2Y7-Z&scisig=AAGBfm0AAAAAYmbXDolJxlQtwuVmh20KDQZ8Hz8ecDob&scisf=4&ct=citation&cd=-1&hl=en" target="_blank">bibtex</a>.</p>
+<a href="https://scholar.googleusercontent.com/scholar.bibq=info:9jhsjSWE4VAJ:scholar.google.com/&output=citation&scisdr=CgXXzk_wENGGnPfRFlU:AAGBfm0AAAAAYmbXDlXGWxZ4yqX35pHAunjuiWI2Y7-Z&scisig=AAGBfm0AAAAAYmbXDolJxlQtwuVmh20KDQZ8Hz8ecDob&scisf=4&ct=citation&cd=-1&hl=en" target="_blank">bibtex</a>.</p>
        </ul>
     <hr>
 
